--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,7 +9,7 @@
   <nav class="main-menu">
     <ul>
       <li><a href="/gesichter-finden/">Gesichter finden</a></li>
-      <li><a href="/gesichter-erkennen/">Gesichter erkennen</a></li>
+      <li><a href="/gesichter-erkennen/">Gesichter wiedererkennen</a></li>
       <li><a href="/ueber-das-projekt/">Über das Projekt</a></li>
     </ul>
   </nav>
